chore(facets): Fix broken styling/collapse toggles

--- a/app/scripts/components/facets/styles/facets.less
+++ b/app/scripts/components/facets/styles/facets.less
@@ -1,32 +1,41 @@
 .facet-element {
-  .facet-free-text-input {
-    padding-right: 15px;
-  }
 
-  .facet-group, .facet-free-text-input {
+  &.facet-group, &.facet-free-text-input {
     margin: 5px 0;
-    padding-left: 15px;
+    padding: 0 15px;
 
     &:first-child {
-      padding-top: 5px;
+      margin-top: 5px;
     }
 
     div.facet-name {
       text-transform: capitalize;
       cursor: pointer;
       font-weight: 600;
+      font-size: 1.3rem;
     }
 
     .facet-term-group {
       margin-left: 17px;
 
-      .facet-term {
-        font-size: 12px;
-        font-weight: 300;
-        margin-bottom: 0;
+      ul.terms-list {
+        > li {
+          > span:first-child {
+            cursor: pointer;
+            font-size: 1.1rem;
+            display: inline-block;
+            max-width: 80%;
+          }
 
-        input {
-          margin-right: 5px;
+          span.label {
+            float: right;
+          }
+        }
+      }
+
+      .active-terms {
+        > li {
+          color: forestgreen;
         }
       }
 
